--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,10 +1,8 @@
-/* Space out content a bit */
 body {
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
 .footer {
@@ -12,11 +10,10 @@ body {
   padding-right: 15px;
 }
 
-/* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
 }
-/* Make the masthead heading the same height as the navigation */
+
 .header h3 {
   margin-top: 0;
   margin-bottom: 0;
@@ -24,14 +21,12 @@ body {
   padding-bottom: 19px;
 }
 
-/* Custom page footer */
 .footer {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
 
-/* Customize container */
 @media (min-width: 800px) {
   .container {
     max-width: 800px;
@@ -77,3 +72,17 @@ body {
     border-bottom: 0;
   }
 }
+
+/* About page related styles */
+.my-username {
+  /*color: #0099cc;*/
+}
+
+.img-avatar {
+  width: 68px;
+  height: 68px;
+  position: relative;
+  float: right;
+}
+
+
